Closed
Bug 94038
Opened 24 years ago
Closed 24 years ago
Wrong hostname in the browser status bar, if proxy keep-alive used
Categories
(Core :: Networking: HTTP, defect, P3)
Tracking
()
RESOLVED
FIXED
People
(Reporter: steve8988, Assigned: bbaetz)
References
Details
(Keywords: topembed, Whiteboard: r=gagan, sr=darin, verified-on-trunk)
Attachments
(1 file)
|
4.93 KB,
patch
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.3) Gecko/20010801
BuildID: 2001080104
When you connect to a website e.g. http://news.cnet.com and then go to another
site e.g. http://www.mozilla.org, the URL that is displayed at the bottom of the
status bar (i.e. Connecting to: xxxxx) is wrong. Actually it displays the
previous server or servers (the ones you visited in the past) rather than the
current one. But it goes to the right page, and after a few clicks, it seems to
correct itself
Reproducible: Sometimes
Steps to Reproduce:
1. Go to a website like http://news.cnet.com
2. Then type in another website like http://www.pcworld.com
3. Look at the status on the bottom and see what server it is connecting to
4. Try going to different website since it doesnt always happen
Actual Results: It displays displays "Connecting to: news.cnet.com" rather than
"Connecting to: www.pcworld.com"
Expected Results: It should display the website you are currently trying to
connect to.
Comment 1•24 years ago
|
||
steve, you're using a proxy like junkbuster or something?
Yes I am using a filtered proxy. I just changed to the official one I use
(authenticated) and it still does the same thing. Went to www.ibm.com. Then
changed to www.dell.com and it displays "Connecting to: www.ibm.com" and later
"Transferring data from www.ibm.com"
Comment 3•24 years ago
|
||
have you tried changing Edit|Preferences. Debug->Networking HTTP Version from
1.1 to 1.0?
Just set the HTTP version from 1.1 to 1.0 and the error seems to have gone and I
can't reproduce it again.
Comment 5•24 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 24 years ago
Resolution: --- → DUPLICATE
| Assignee | ||
Comment 6•24 years ago
|
||
VERIFIED. If you're not using junkbuster, then please comment with the proxy
name/URL.
Status: RESOLVED → VERIFIED
| Assignee | ||
Comment 8•24 years ago
|
||
OK, thanks. I looked arround their site, but couldn't find any information on
what server they're using. If its not junkbuster, then its another one which is
broken in the same way.
just try going to a sitename that doesnt exist like http://www.test
It says its running Squid/2.3.STABLE3
| Assignee | ||
Comment 10•24 years ago
|
||
OK, sorry for the confusion. This isn't a dupe, and I can reproduce this on
squid as well.
Reopening, -> networking, cc darin
This stops when keep-alives are disabled.
Whats happening is that the status messages are coming from
nsSocketTransport.cpp. When we reuse the connection to a proxy to talk to a
different server, mHostName is never updated. I'm not sure of the best place to
do this. Darin?
Also see bug 11708.
Status: VERIFIED → UNCONFIRMED
Component: Browser-General → Networking: HTTP
Resolution: DUPLICATE → ---
| Assignee | ||
Comment 11•24 years ago
|
||
Bugzilla won't let me reopen and reassign in one step...
Assignee: asa → neeti
Status: UNCONFIRMED → NEW
Ever confirmed: true
QA Contact: doronr → tever
Comment 12•24 years ago
|
||
There is an earlier dupe, I just can't find it. It was a proxy-only bug.
| Assignee | ||
Comment 13•24 years ago
|
||
benc: There can't be a dupe earlier than the last couple of weeks, because thats
when my patch to resue proxy connections to different hosts went in.
-> me, since it was my patch that broke it.
darin: is touching mSocketTransport->Set{Host,Port} from
nsHttpConnection::ActivateConnection going to run into threadsaftey issues? It
looks safe to me, though.
Assignee: neeti → bbaetz
Updated•24 years ago
|
OS: Linux → All
Comment 14•24 years ago
|
||
This is exactly what happens with mozilla 2001080110, in Windows ME (spanish),
with the difference that it always shows the same behavior.
Updated•24 years ago
|
Summary: Wrong URL in the status bar of browser → Wrong hostname in the browser status bar, if proxy keep-alive used
Comment 15•24 years ago
|
||
It was a older bug, but it morphed. Maybe I'll kick the new reporters of out
that bug and send them here...
| Assignee | ||
Comment 16•24 years ago
|
||
| Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla0.9.4
Comment 17•24 years ago
|
||
fix the opening brace to SetOriginServer and r/sr=darin
| Assignee | ||
Comment 18•24 years ago
|
||
This has been checked in on the trunk. Marking topembed for consideration for
the ec branch.
Keywords: topembed
Whiteboard: r=gagan, sr=darin, checked-in-on-trunk
Target Milestone: mozilla0.9.4 → ---
Comment 19•24 years ago
|
||
With mozilla 2001080110 and W-ME.
I had the problem described in the bug.
I had to erase mozilla and reinstall mozilla again ( the one I had before, and
showed in the first line). Then the problem desapeared : the windows displayed
correctly. Other problem shows up : Now, sometimes, the history in the side
window goes blank; after finding an URL with FIND, the history reappears.
Comment 20•24 years ago
|
||
verified on trunk:
winNT4 2001081303
mac os9 2001081308
linux rh6 2001081308
Whiteboard: r=gagan, sr=darin, checked-in-on-trunk → r=gagan, sr=darin, verified-on-trunk
Comment 21•24 years ago
|
||
*** Bug 95168 has been marked as a duplicate of this bug. ***
Comment 22•24 years ago
|
||
*** Bug 95415 has been marked as a duplicate of this bug. ***
Comment 23•24 years ago
|
||
please check-into 0.9.2 branch
| Assignee | ||
Comment 24•24 years ago
|
||
checked in to branch
Status: ASSIGNED → RESOLVED
Closed: 24 years ago → 24 years ago
Keywords: vbranch
Resolution: --- → FIXED
Comment 25•24 years ago
|
||
*** Bug 95905 has been marked as a duplicate of this bug. ***
Comment 26•24 years ago
|
||
*** Bug 96433 has been marked as a duplicate of this bug. ***
Comment 27•24 years ago
|
||
*** Bug 96605 has been marked as a duplicate of this bug. ***
Comment 28•24 years ago
|
||
*** Bug 96865 has been marked as a duplicate of this bug. ***
Comment 29•24 years ago
|
||
*** Bug 97066 has been marked as a duplicate of this bug. ***
Comment 30•24 years ago
|
||
*** Bug 97959 has been marked as a duplicate of this bug. ***
Comment 31•24 years ago
|
||
*** Bug 94452 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•