Bug 94038 - get the status bar hostname correct when reusing connections to prox y servers. r=gagan, sr=darin, a=marek